--- a/src/main/resources/META-INF/resources/frontend/index.html
+++ b/src/main/resources/META-INF/resources/frontend/index.html
@@ -21,9 +21,9 @@
 
     <title>Frontend</title>
 
-    <script src="/bower_components/webcomponentsjs/webcomponents-loader.js"></script>
+    <script src="bower_components/webcomponentsjs/webcomponents-loader.js"></script>
 
-    <link rel="import" href="/ExampleTemplate.html">
+    <link rel="import" href="ExampleTemplate.html">
 </head>
 <body>
 <hello-world></hello-world>
