bring the bean back and autowired feature

--- a/src/main/webapp/frontend/ExampleTemplate.html
+++ b/src/main/webapp/frontend/ExampleTemplate.html
@@ -20,7 +20,7 @@
 <!-- Defines the example-template element -->
 <dom-module id="example-template">
     <template>
-        <span>[[name]]</span>
+        <span>[[value]]</span>
     </template>
     
     <!-- Polymer boilerplate to register the example-template element -->
