--- a/src/main/webapp/frontend/ExampleTemplate.html
+++ b/src/main/webapp/frontend/ExampleTemplate.html
@@ -15,14 +15,14 @@
   -->
 
 <!-- Dependency resources -->
-<link rel="import" href="bower_components/polymer/polymer.html">
+<link rel="import" href="bower_components/polymer/polymer-element.html">
 
 <!-- Defines the example-template element -->
 <dom-module id="example-template">
     <template>
-        <span>[[name]]</span>
+        <span>[[value]]</span>
     </template>
-    
+
     <!-- Polymer boilerplate to register the example-template element -->
     <script>
         class ExampleTemplate extends Polymer.Element {
