Remove valo theme. Fix css.

--- a/src/main/webapp/frontend/styles.html
+++ b/src/main/webapp/frontend/styles.html
@@ -14,14 +14,11 @@
   ~ the License.
   --
 
-<!-- Adding Valo theme for vaadin-button -->
-<link rel="import" href="bower_components/vaadin-valo-theme/vaadin-button.html">
-
 <custom-style>
     <!-- This is where your App's styling should go. You can use .css files too. -->
     <style>
         html {
-            height auto;
+            height: auto;
         }
-    <style>
+    </style>
 </custom-style>
