Use padding instead of margin
Make code in this project the same as in original starter

--- a/src/main/webapp/frontend/styles/shared-styles.html
+++ b/src/main/webapp/frontend/styles/shared-styles.html
@@ -6,7 +6,7 @@
         }
 
         .main-layout {
-            margin: 20px;
+            padding: 20px;
         }
     </style>
 </custom-style>
