Let the project wizard change the title

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Project Base for Vaadin Flow with Spring</title>
+  <title>###Project Name###</title>
   <!-- index.ts is included here automatically (either by the dev server or during the build) -->
 </head>
 <body>
