--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>###Project Name###</title>
+  <style>
+    body {
+      height: 100vh;
+      margin: 0;
+    }
+
+    #outlet {
+      height: 100%;
+    }
+  </style>
   <!-- index.ts is included here automatically (either by the dev server or during the build) -->
 </head>
 <body>
